deploy/keycloak/keycloak-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
      - name: keycloak
        image: quay.io/keycloak/keycloak:24.0.5
        ports:
        - containerPort: 8080 # HTTP port
        - containerPort: 8443 # HTTPS port
        args: ["start-dev"] # For development purposes
---
apiVersion: v1
kind: Service
metadata:
  name: keycloak-service
  namespace: keycloak
  labels:
    app: keycloak
spec:
  selector:
    app: keycloak
  ports:
  - protocol: TCP
    name: http
    port: 80 # External HTTP port
    targetPort: 8080 # Internal HTTP port of Keycloak
  - protocol: TCP
    name: https
    port: 443 # External HTTPS port
    targetPort: 8443 # Internal HTTPS port of Keycloak
  type: ClusterIP
